--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <header>Some header links will go here!</header>
+    <div class="userInputView">
+        A text box will go here!
+    </div>
 </body>
 </html>
