--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <div class="userInputView">
         A text box will go here!
     </div>
+    <div class="userOutputView">
+        This div will display data output!
+    </div>
 </body>
 </html>
