Added header tag for testing Git

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header>Some header links will go here!</header>
     <div class="userInputView">
         A text box will go here!
+        <!--A submit button will go here! -->
     </div>
     <div class="userOutputView">
         This div will display data output!
+        <!--A reset button will go here! -->
     </div>
 </body>
 </html>
