--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <header>Some header links will go here!</header>
     <div class="userInputView">
         A text box will go here!
-        <!--A submit button will go here! -->
+        <form action="" method="post">
+            <label for="userDataInput">Local-Scan Tool</label>
+            <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Testing</textarea>
+            <br>
+            <input type="submit" name="submitInfo" value="Submit">
+        </form>
     </div>
     <div class="userOutputView">
         This div will display data output!
