Added reset button
Signed-off-by: Skyhawk Everheart <ean.baker@me.com>

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <div class="userOutputView">
         This div will display data output!
         <!--A reset button will go here! -->
+        <label for="resetButton"></label>
+        <input type="reset" value="reset" id="resetButton">
     </div>
 </body>
 </html>
