--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
     <link rel="stylesheet" href="styles.css">
     <style></style>
     <title>Local-Scan Tool</title>
-
+    <script src="scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
-            integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script>
-        function swapDivVisibility(divShow, divHide) {
-            document.getElementById(divHide).style.display = "none";
-            document.getElementById(divShow).style.display = "block";
-        }
+            integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous">
     </script>
 </head>
 <body>
@@ -23,15 +18,14 @@
         <label for="userDataInput">Local-Scan Tool</label>
         <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Testing</textarea>
         <br>
-        <input type="submit" name="submitInfo" value="Submit"
-               onclick="swapDivVisibility('userInputView','userOutputView')">
+        <input type="submit" name="submitInfo" value="Submit" id="submitButton">
     </form>
 </div>
 <div id="userOutputView">
     This div will display data output!
     <!--A reset button will go here! -->
     <label for="resetButton"></label>
-    <button id="resetButton" onclick="swapDivVisibility('userOutputView','userInputView')">Reset</button>
+    <button id="resetButton">Reset</button>
 </div>
 </body>
 </html>
