Added CSS for header and added links in header. Also wrapped the click functions for buttons in a ready event.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-<header>Some header links will go here!</header>
+    <header>
+        <nav class="nav-bar">
+            <a href="index.html">New Scan</a>
+            <a href="https://zkillboard.com/">zKillboard</a>
+            <a href="https://evemaps.dotlan.net/">Dotlan</a>
+            <a href="https://www.eveonline.com/">EVE Online</a>
+        </nav>
+    </header>
 <div id="userInputView">
-    A text box will go here!
     <form>
         <label for="userDataInput">Local-Scan Tool</label>
         <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Testing</textarea>
