Added JS to prevent submit button refreshing the page.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 <div id="userInputView">
-    <form>
+    <form id="inputData">
         <label for="userDataInput">Local-Scan Tool</label>
         <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Testing</textarea>
         <br>
