--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <label for="userDataInput">Local-Scan Tool</label>
         <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Testing</textarea>
         <br>
-        <input type="submit" name="submitInfo" value="Submit" id="submitButton">
+        <input type="submit" name="submitInfo" value="Submit" id="submitButton" class="center">
     </form>
 </div>
 <div id="userInstructions">
@@ -43,7 +43,10 @@
         <li>Click inside of the textbox on this page and press CTRL+v (command+v on a mac) to paste the  data.</li>
         <li>Click Submit!</li>
     </ul>
-    <img src="media/scanExample.png" alt="Example of local scan selection.">
+    <img src="media/scanExample.png" alt="Example of local scan selection." class="center">
+</div>
+<div id="userExample">
+
 </div>
 <div id="userOutputView">
     This div will display data output!
