Added javascript for reset button to clear text box.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             <a href="index.html">New Scan</a>
         </div>
         <div id="rightLinks">
-            <a href="https://zkillboard.com/">zKillboard</a>
-            <a href="https://evemaps.dotlan.net/">Dotlan</a>
-            <a href="https://www.eveonline.com/">EVE Online</a>
+            <ul>
+                <li><a href="https://zkillboard.com/">zKillboard</a></li>
+                <li><a href="https://evemaps.dotlan.net/">Dotlan</a></li>
+                <li><a href="https://www.eveonline.com/">EVE Online</a></li>
+            </ul>
         </div>
     </nav>
 </header>
