Added JS function to clear textarea value when the user clicks into it.
Signed-off-by: Skyhawk Everheart <ean.baker@me.com>

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="userInputView">
     <form id="inputData">
         <label for="userDataInput">Local-Scan Tool</label>
-        <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Testing</textarea>
+        <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Paste your scan here.</textarea>
         <br>
         <input type="submit" name="submitInfo" value="Submit" id="submitButton" class="center">
     </form>
