Changed CSS and HTML to redo page display - still work in progress.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,8 @@
         </div>
     </nav>
 </header>
-<div id="userInputView">
+<div id="overallContentWrapper">
+<div id="leftPaneWrapper">
     <form id="inputData">
         <label for="userDataInput">Local-Scan Tool</label>
         <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Paste your scan here.</textarea>
@@ -50,6 +51,7 @@
     <div id="userExample">
         <img src="media/scanExample.png" alt="Example of local scan selection." class="center">
     </div>
+</div>
 </div>
 <div id="userOutputView">
     This div will display data output!
