--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,32 +26,33 @@
     </nav>
 </header>
 <div id="overallContentWrapper">
-<div id="leftPaneWrapper">
-    <form id="inputData">
-        <label for="userDataInput">Local-Scan Tool</label>
-        <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Paste your scan here.</textarea>
-        <br>
-        <input type="submit" name="submitInfo" value="Submit" id="submitButton" class="center">
-    </form>
-</div>
-<div id="rightPaneWrapper">
-    <div id="userInstructions">
-        <h3>Posting a local or fleet scan:</h3>
-        <ul>
-            <li>Click on a character in the ingame channel you want to scan.
-                <ul>
-                    <li>This can be fleet chat, local, or literally any other ingame channel.</li>
-                </ul>
-            <li>Press CTRL+a on your keyboard (command+a on a mac) to highlight everyone in the channel.</li>
-            <li>Press CTRL+c (command+c on a mac) to copy the selection to the clipboard.</li>
-            <li>Click inside of the textbox on this page and press CTRL+v (command+v on a mac) to paste the data.</li>
-            <li>Click Submit!</li>
-        </ul>
+    <div id="leftPaneWrapper">
+        <form id="inputData">
+            <label for="userDataInput">Local-Scan Tool</label>
+            <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Paste your scan here.</textarea>
+            <br>
+            <input type="submit" name="submitInfo" value="Submit" id="submitButton" class="center">
+        </form>
     </div>
-    <div id="userExample">
-        <img src="media/scanExample.png" alt="Example of local scan selection." class="center">
+    <div id="rightPaneWrapper">
+        <div id="userInstructions">
+            <h3>Posting a local or fleet scan:</h3>
+            <ul>
+                <li>Click on a character in the ingame channel you want to scan.
+                    <ul>
+                        <li>This can be fleet chat, local, or literally any other ingame channel.</li>
+                    </ul>
+                <li>Press CTRL+a on your keyboard (command+a on a mac) to highlight everyone in the channel.</li>
+                <li>Press CTRL+c (command+c on a mac) to copy the selection to the clipboard.</li>
+                <li>Click inside of the textbox on this page and press CTRL+v (command+v on a mac) to paste the data.
+                </li>
+                <li>Click Submit!</li>
+            </ul>
+        </div>
+        <div id="userExample">
+            <img src="media/scanExample.png" alt="Example of local scan selection." class="center">
+        </div>
     </div>
-</div>
 </div>
 <div id="userOutputView">
     This div will display data output!
