Display as Flex

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,8 +25,9 @@
         </div>
     </nav>
 </header>
-<div id="overallContentWrapper">
-    <div id="leftPaneWrapper">
+<div id="overallContentWrapper" style="display:flex;">
+<div id="leftPaneWrapper" style="display: inherit;">
+
         <form id="inputData">
             <label for="userDataInput">Local-Scan Tool</label>
             <textarea name="userDataInput" id="userDataInput" rows="50" cols="50">Paste your scan here.</textarea>
