Added javascript to transmit user input to the server. Added java functions to send response to browser. Added CORS mapping to permit local access from different origin.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,7 +59,7 @@ the EVE Online community.
     </div>
 </div>
 <div id="userOutputView">
-    This div will display data output!
+    <span id="userOutputData">This div will display data output!</span>
     <label for="resetButton"></label>
     <button id="resetButton">Reset</button>
 </div>
