--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@ the EVE Online community.
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="EVE, EVE Online, local scan, d-scan, tool, eve tool, CCP">
     <link rel="stylesheet" href="styles.css">
     <style></style>
     <title>Local-Scan Tool</title>
